Fix JFoenix reflection compatibility under Java 17 by adding JVM --add-opens flags to startup and jpackage configurations